@@ -5,8 +5,10 @@
 CREATE TABLE services (
   serviceid		int(4)		NOT NULL auto_increment,
   name			varchar(128)	DEFAULT '' NOT NULL,
+  status		int(1)		DEFAULT '0' NOT NULL,
   triggerid		int(4),
-  PRIMARY KEY (serviceid)
+  PRIMARY KEY (serviceid),
+  KEY (triggerid)
 );
 
 #
@@ -18,7 +20,8 @@ CREATE TABLE services_links (
   servicedownid		int(4)		DEFAULT '0' NOT NULL,
   soft			int(1)		DEFAULT '0' NOT NULL,
   KEY (serviceupid),
-  KEY (servicedownid)
+  KEY (servicedownid),
+  UNIQUE (serviceupid,servicedownid)
 );
 
 #
