@@ -27,6 +27,9 @@
 	}
 
 	show_table_header_end();
+	echo "<br>";
+
+	show_table_header("ALERTS");
 ?>
 
 
