@@ -40,6 +40,7 @@
 <?
 	show_table_header("HOSTS");
 	echo "<TABLE BORDER=0 COLS=4 WIDTH=\"100%\" BGCOLOR=\"#CCCCCC\" cellspacing=1 cellpadding=3>";
+	echo "<TR>";
 	echo "<TD WIDTH=\"10%\" NOSAVE><B>Host</B></TD>";
 	echo "<TD WIDTH=\"10%\" NOSAVE><B>Port</B></TD>";
 	echo "<TD WIDTH=\"10%\" NOSAVE><B>Status</B></TD>";
@@ -159,8 +160,6 @@
 		echo "<input type=\"submit\" name=\"register\" value=\"update\">";
 		echo "<input type=\"submit\" name=\"register\" value=\"delete\">";
 	}
-
-	echo "</form>";
 
 	show_table2_header_end();
 ?>
