@@ -68,7 +68,7 @@
 		}
 		echo "</TR>";
 	}
-	echo "</TABLE><BR>";
+	echo "</TABLE>";
 ?>
 </FONT>
 </TR>
